# restaurant-bot

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  seed_data.py
app/: main.py
app/config/: settings.py
app/models/: document.py
app/routers/: chatbot_router.py
app/services/: chatbot_service.py  chunking_service.py  embedding_service.py  opensearch_connector.py  semantic_search_service.py
